More refactoring of oxalis-outbound.